# oet-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_INSTRUCTIONS.md  pyproject.toml  requirements.txt
docs/: API_DOCS.md  ARITHMETIC_OPERATORS.md  MINTEXT_GUIDE.md
src/: __init__.py  algos.py  utils.py
src/oet_core/: __init__.py  algos.py  mintext.py  symbolics.py  utils.py
tests/: __init__.py  run_all_tests.py  test_algos.py  test_mintext.py  test_symbolics.py  test_utils.py
