[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oet-core"
version = "1.1.0"
description = "Lightweight data processing toolkit - algorithms, utilities, and database helpers for ETL pipelines"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Markus Applegate", email = "markusapplegate27@gmail.com"}
]
keywords = ["algorithms", "utilities", "data-structures", "binary-search", "hashmap", "matrix", "sqlite", "database", "etl", "data-pipeline", "symbolic-math", "sympy", "text-analysis", "nlp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Text Processing",
]
dependencies = []

[project.optional-dependencies]
yaml = [
    "pyyaml>=6.0",
]
graph = [
    "networkx>=3.0",
]
symbolic = [
    "sympy>=1.12",
]
all = [
    "pyyaml>=6.0",
    "networkx>=3.0",
    "sympy>=1.12",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/markusapplegate/oet-core"
Documentation = "https://github.com/markusapplegate/oet-core/blob/main/docs/API_DOCS.md"
Repository = "https://github.com/markusapplegate/oet-core"
"Bug Tracker" = "https://github.com/markusapplegate/oet-core/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["oet_core"]

[tool.setuptools.package-data]
oet_core = ["py.typed"]
